k8s/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: croplands-db-access
  namespace: croplands
spec:
  podSelector:
    matchLabels:
      app: croplands-db
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
          app: croplands
